--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-mailchimp-subscribe": "^2.1.3",
     "react-redux": "^7.2.4",
     "react-render-html": "^0.6.0",
     "react-router-dom": "^5.2.0",
